--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,110 +1,118 @@
 .carousel {
+	width: 100%;
+	height: 100%;
 
-    width: 100%;
-    height: 100%;
+	&__contenedor {
+		position: relative;
+		margin: 20px 20px;
+	}
 
-    &__contenedor {
-        position: relative;
-        margin: 20px 20px;
-    }
+	&__lista {
+		display: flex;
+		flex-direction: row;
 
-    &__lista {
-        display: flex;
-        flex-direction: row;
+		&--lg {
+			display: none;
+		}
+	}
 
-        &--lg {
-            display: none;
-        }
-    }
+	&__siguiente,
+	&__anterior {
+		position: absolute;
+		display: block;
+		border: none;
+		top: calc(50% - 20px);
+		cursor: pointer;
+		line-height: 30px;
+		text-align: center;
+		background: none;
+		color: $rojo;
 
-    &__siguiente,
-    &__anterior {
-        position: absolute;
-        display: block;
-        border: none;
-        top: calc(50% - 20px);
-        cursor: pointer;
-        line-height: 30px;
-        text-align: center;
-        background: none;
-        color: $rojo;
+		&--chevron {
+			font-size: 25px;
+		}
+	}
 
-        &--chevron {
-            font-size: 25px;
-        }
+	&__anterior {
+		left: -30px;
+	}
 
-    }
-
-    &__anterior {
-        left: -30px;
-    }
-
-    &__siguiente {
-        right: -30px;
-    }
+	&__siguiente {
+		right: -30px;
+	}
 }
 
+@media screen and (min-width: 768px) {
+	.carousel {
+		&__lista {
+			display: none;
 
-@media screen and (min-width:768px) {
-    .carousel {
+			&--lg {
+				display: flex;
+				flex-flow: row wrap;
+			}
+		}
 
+		&__card {
+			&--lg {
+				display: flex;
+				flex-flow: row wrap;
+				width: 650px;
+			}
+		}
 
-        &__lista {
-            display: none;
+		&__siguiente,
+		&__anterior {
+			top: calc(100%);
 
-            &--lg {
-                display: flex;
-                flex-flow: row wrap;
-            }
-        }
+			&--chevron {
+				font-size: 34px;
+			}
+		}
 
-        &__card {
-            &--lg {
-                display: flex;
-                flex-flow: row wrap;
-                width: 650px;
-            }
-        }
+		&__anterior {
+			right: -75%;
+		}
 
-        &__siguiente,
-        &__anterior {
-            top: calc(100%);
+		&__siguiente {
+			right: 5%;
+		}
+	}
 
-            &--chevron {
-                font-size: 34px;
-            }
-        }
-
-        &__anterior {
-            right: -75%;
-        }
-
-        &__siguiente {
-            right: 5%;
-
-        }
-    }
-
-    .slick-initialized .slick-slide {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: center;
-        align-items: center;
-    }
+	.slick-initialized .slick-slide {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
+@media screen and (min-width: 992px) {
+	.carousel {
+		&__siguiente,
+		&__anterior {
+			margin-top: 40px;
+		}
+		&__contenedor {
+			margin: 0;
+		}
 
-@media screen and (min-width:992px) {
-    .carousel {
+		&__card {
+			&--lg {
+				width: 550px;
+			}
+		}
+	}
+}
 
-        &__contenedor {
-            margin: 0;
-        }
+@media screen and (min-width: 1200px) {
+	.carousel {
+		&__anterior {
+			right: -85%;
+		}
 
-        &__card {
-            &--lg {
-                width: 550px;
-            }
-        }
-    }
+		&__siguiente {
+			right: 3%;
+		}
+	}
 }
